--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tsconfig/node16": "^16.1.1",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
     "@types/node": "^20.9.2",
+    "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "@typescript-eslint/parser": "^6.11.0",
     "eslint": "^8.54.0",
@@ -31,6 +32,8 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "source-map-support": "^0.5.21"
+    "axios-cookiejar-support": "^4.0.7",
+    "source-map-support": "^0.5.21",
+    "tough-cookie": "^4.1.3"
   }
 }
