--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@tsconfig/node16": "^16.1.1",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
+    "@types/luxon": "^3.3.4",
     "@types/node": "^20.9.2",
     "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
@@ -33,6 +34,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "axios-cookiejar-support": "^4.0.7",
+    "luxon": "^3.4.4",
     "source-map-support": "^0.5.21",
     "tough-cookie": "^4.1.3"
   }
