--- a/app.json
+++ b/app.json
@@ -140,10 +140,12 @@
         "onoff.legionella",
         "onoff.preheating",
         "measure_temperature",
-        "measure_temperature.required",
         "target_temperature",
         "operation_mode",
-        "vacation"
+        "vacation",
+        "meter_power",
+        "meter_power.produced",
+        "measure_temperature.required"
       ],
       "capabilitiesOptions": {
         "onoff.auto": {
@@ -206,6 +208,12 @@
           "title": {
             "en": "Process required temperature",
             "fr": "Température requise pour le processus"
+          }
+        },
+        "meter_power.produced": {
+          "title": {
+            "en": "Produced energy",
+            "fr": "Énergie produite"
           }
         },
         "target_temperature": {
