--- a/app.json
+++ b/app.json
@@ -28,7 +28,7 @@
     "fr": [
       "ariston",
       "ballon d'eau chaude",
-      "chauffe-eau",
+      "chauffe eau",
       "ecs",
       "eau chaude sanitaire",
       "nuos"
