--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -25,7 +25,7 @@
     "fr": [
       "ariston",
       "ballon d'eau chaude",
-      "chauffe-eau",
+      "chauffe eau",
       "ecs",
       "eau chaude sanitaire",
       "nuos"
