Add community topic

--- a/app.json
+++ b/app.json
@@ -48,6 +48,7 @@
   },
   "source": "https://github.com/OlivierZal/com.ariston",
   "support": "https://github.com/OlivierZal/com.ariston/issues",
+  "homeyCommunityTopicId": 98229,
   "contributing": {
     "donate": {
       "paypal": {
