--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -45,6 +45,7 @@
   },
   "source": "https://github.com/OlivierZal/com.ariston",
   "support": "https://github.com/OlivierZal/com.ariston/issues",
+  "homeyCommunityTopicId": 98229,
   "contributing": {
     "donate": {
       "paypal": {
