--- a/app.json
+++ b/app.json
@@ -543,7 +543,8 @@
         }
       ],
       "name": {
-        "en": "Nuos"
+        "en": "Nuos",
+        "fr": "Nuos"
       },
       "capabilities": [
         "onoff",
