--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "devDependencies": {
     "@eslint/js": "^8.56.0",
     "@jest/globals": "^29.7.0",
+    "@stylistic/eslint-plugin": "^1.6.1",
     "@tsconfig/node16": "^16.1.1",
     "@types/homey": "npm:homey-apps-sdk-v3-types@^0.3.5",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.11.16",
+    "@types/node": "^20.11.17",
     "@types/tough-cookie": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
