--- a/app.json
+++ b/app.json
@@ -480,11 +480,12 @@
       "class": "heater",
       "pair": [
         {
+          "id": "loading",
+          "template": "loading"
+        },
+        {
           "id": "login",
           "template": "login_credentials",
-          "navigation": {
-            "next": "list_devices"
-          },
           "options": {
             "logo": "logo.png",
             "usernameLabel": {
